# programming4-BirgenDanneels

./: CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Data/: Level.json
Game/: CMakeLists.txt  Main.cpp
Game/Commands/: MoveCommands.cpp  MoveCommands.h
Game/Components/: ComponentsInclude.h  FPSCounter.cpp  FPSCounter.h  HealthComponent.cpp  HealthComponent.h  PointsComponent.cpp  PointsComponent.h  RotatorComponent.h  StatsComponent.cpp  StatsComponent.h  TankComponent.cpp  TankComponent.h
Minigin/: CMakeLists.txt  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform.cpp  Transform.h
Minigin/Commands/: Command.h  GameActorCommand.h  MoveCommands.cpp  MoveCommands.h
Minigin/Components/: AchievementSystem.cpp  AchievementSystem.h  CharacterController.cpp  CharacterController.h  Component.cpp  Component.h  ComponentsInclude.h  FPSCounter.cpp  FPSCounter.h  GameActor.cpp  GameActor.h  HealthComponent.cpp  HealthComponent.h  PointsComponent.cpp  PointsComponent.h  RotatorComponent.cpp  RotatorComponent.h  StatsComponent.cpp  StatsComponent.h  TankComponent.cpp  TankComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  ThrashCacheComponent.cpp  ThrashCacheComponent.h  TransformComponent.cpp  TransformComponent.h
Minigin/Events/: Event.h  GameEventQueue.cpp  GameEventQueue.h  Observer.h  Subject.h
Minigin/Input/: Gamepad.cpp  Gamepad.h  GamepadImpl.h  GamepadInput.h  InputDevice.cpp  InputDevice.h  InputMap.cpp  InputMap.h  Keyboard.cpp  Keyboard.h  SDL3GamepadImpl.cpp  SDL3GamepadImpl.h  XInputGamepadImpl.cpp  XInputGamepadImpl.h
Minigin/Input/Bindings/: ActionBinding.h  InputStates.h
Minigin/Loading/: ComponentFactory.h  LoadingHelpers.h  LoadingStructs.h  SceneLoader.cpp  SceneLoader.h
Minigin/Loading/Interfaces/: IComponentLoadable.h  IEventLinkable.h
Minigin/Sound/: LoggingSoundSystem.h  SdlSoundSystem.cpp  ServiceLocator.cpp  ServiceLocator.h  SoundSystem.h
Minigin/Steam/: SteamAchievements.cpp  SteamAchievements.h
Minigin/Utils/: HashUtil.h
web/: index.html
